[project]
name = "python-audio"
version = "0.1.2"
description = "Package for working on audio in python"
authors = [
    { name = "Mayank Sinha", email = "sinha.mayank900@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "setuptools>=42",
]

[project.urls]
Homepage = "https://github.com/AstralScribe/python-audio.git"
Issues = "https://github.com/AstralScribe/python-audio/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.pyright]
typeCheckingMode = "off"
